--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ where = ["src"]
 
 
 [project]
-name = "mdeq"
+name = "chempanion"
 dynamic = ["version"]
 authors = [
   { name="Viktor Svahn", email="svahnv@gmail.com" },
@@ -36,4 +36,4 @@ Homepage = "https://github.com/viktorsvahn/mdeq/"
 Issues = "https://github.com/viktorsvahn/mdeq/issues"
 
 [project.scripts]
-mdeq = "mdeq.main:main"
+cmp = 'cmp.cli:main'
